# BobTheBot

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: MEMORY.md
.serena/: project.yml
.serena/cache/python/: document_symbols.pkl  raw_document_symbols.pkl
.serena/memories/: post_refactor_status_2026-05-14.md  progress_risks_next_steps_2026-05-14.md  session_summary_2026-05-16.md
.serena/memories/auth/: browser_registration_login_context_2026-05-14.md  live_jagex_and_verification_status_2026-05-14.md
.serena/memories/feedback/: lessons_learned.md
.serena/memories/project/: agent_workflow_guide.md  architecture_deep_dive.md  cli_mcp_ux_polish_2026-05-14.md  (+13 more)
Scripts/: MCPBridge.java
bobthebot/: __init__.py  app.py  auth.py  auth_verification.py  browser.py  cli.py  config.py  engine.py  mcp_server.py  mcp_server.py,cover  mcp_tools.py  models.py  processes.py  registries.py  tasks.py
bobthebot/backends/: base.py  cv.py  dreambot.py
bobthebot/core/: __init__.py  engine.py  models.py  registries.py
bobthebot/tools/: __init__.py  _base.py  auth.py  engine.py  inputs.py  observation.py  runtime.py
docs/: agent-ops.md  isolated-bolt-runelite-demo.md  project-context.md
osbc/: osbc_mcp_server.py  run.sh
osbc/src/: auth.py  config.py  control.py  launcher.py  osbc.py  runelite_launcher.py  tasks.py  vision.py
osbc/utils/: terminal_view.py
scripts/: isolated_bolt_demo.sh
tests/: conftest.py  test_auth.py  test_browser_controller.py  test_cli.py  test_dreambot_backend.py  test_engine.py  test_mcp_server.py  test_processes.py  test_tasks.py
